傅里叶变换公式

--- a/algorithm.org
+++ b/algorithm.org
@@ -4,6 +4,7 @@
 #+latex: \newpage 
 
 * 机器学习
+** 基本概念
 - 过拟合：overfitting，一个过分复杂的系统单纯对训练样本集能获得完美的表现，但是对于新鲜样本则可能不令人满意的现象称为过
   拟合；
 - 样本集合：一般样本集合可以分为
@@ -43,7 +44,7 @@ J. Walther在1974年在这种算法的基础上进一步改进，使其可以计
 法只用了移位和加法，很容易用纯硬件来实现，因此我们常能在FPGA运算平台上见到它的身影。不过，大多数的软件程序员们都没有听说
 过这种算法，也更不会主动的去用这种算法。其实，在嵌入式软件开发，尤其是在没有浮点运算指令的嵌入式平台（比如定点型DSP）上
 做开发时，还是会遇上可以用到cordic 算法的情况的，所以掌握基本的cordic算法还是有用的。
-*** 背景
+**** 背景
 三角函数的计算是个复杂的主题，有计算机之前，人们通常通过查找三角函数表来计算任意角度的三角函数的值。这种表格在人们刚刚产
 生三角函数的概念的时候就已经有了，它们通常是通过从已知值（比如sin(π/2)=1）开始并重复应用半角和和差公式而生成。 
 现在有了计算机，三角函数表便推出了历史的舞台。但是像我这样的喜欢刨根问底的人，不禁要问计算机又是如何计算三角函数值的呢。
@@ -57,7 +58,7 @@ J. Walther在1974年在这种算法的基础上进一步改进，使其可以计
 的身影。不过，大多数的软件程序员们都没有听说过这种算法，也更不会主动的去用这种算法。其实，在嵌入式软件开发，尤其是在没有
 浮点运算指令的嵌入式平台（比如定点型dsp）上做开发时，还是会遇上可以用到cordic 算法的情况的，所以掌握基本的cordic算法还是
 有用的。 
-*** 从二分查找法说起
+**** 从二分查找法说起
 先从一个例子说起，知道平面上一点在直角坐标系下的坐标（X,Y）=（100，200），如何求的在极坐标系下的坐标（ρ,θ）。用计算器
 计算一下可知答案是（223.61，63.435），见图\ref{img-cordic1}所示。
 #+caption: 直角坐标系到极坐标系的转换
@@ -167,7 +168,7 @@ cos 函数的值，提前计算好存起来，用时查表。
 	Debug: i = 14 angleSum = 63.432312, angle = 0.002747
 	z = 63.432312
 #+end_src
-*** 减少乘法运算
+**** 减少乘法运算
 现在已经有点cordic算法的样子了，但是我们看到没次循环都要计算4次浮点数的乘法运算，运算量还是太大了。还需要进一步的改
 进。改进的切入点当然还是坐标变换的过程。我们将坐标变换公式变一下形。
 $${x' \choose y'} = {cos(\Theta) \quad sin(\Theta) \choose -sin(\Theta) \quad cos(\Theta)} {x \choose y} = cos(\Theta){1
@@ -233,7 +234,7 @@ Debug: i = 13 angleSum = 63.429565, angle = 0.005493, ρ = 351.240736
 Debug: i = 14 angleSum = 63.432312, angle = 0.002747, ρ = 351.240736
 z = 63.432312
 #+end_src
-*** 消除乘法运算
+**** 消除乘法运算
 我们已经成功的将乘法的次数减少了一半，还有没有可能进一步降低运算量呢？还要从计算式入手。第一次循环时，tan(45)=1，所以第
 一次循环实际上是不需要乘法运算的。第二次运算呢？ 
 tan(22.5)=0.4142135623731,很不幸，第二次循环乘数是个很不整的小数。是否能对其改造一下呢？答案是肯定的。第二次选择22.5度是
@@ -474,7 +475,7 @@ print("resualt: %r" %classify0(point0, g, l, 3))
 #+end_src
 
 ** 决策树
-*** 信息熵
+**** 信息熵
 信息熵用来衡量信息量的大小
 - 若某个集合中不确定性越大，则信息量越大，熵越大；
 - 若某个集合中不确定性越小，则信息量越小，熵越小；
@@ -487,7 +488,7 @@ $$H(X)=\sum_{i=1}^{n}p(x_{i})I(x_{i})=-\sum_{i=1}^{n}p(x_{i})log_{b}p(x_{i})$$
 - 当b=2时熵的单位是bit；
 - 当b=e时熵单位是nat；
 - 当b=10时熵单位是dit。
-*** 算法逻辑
+**** 算法逻辑
 构建决策树的过程，就是减小信息熵，减小不确定性。从而完整构造决策树模型。所
 以我们需要在每一次选择分支属性时，计算这样分类所带来的信息熵的增益，增益越
 大，不确定性越小，最终也就是我们要选择的分支属性。 
@@ -500,8 +501,8 @@ $$H(X)=\sum_{i=1}^{n}p(x_{i})I(x_{i})=-\sum_{i=1}^{n}p(x_{i})log_{b}p(x_{i})$$
   分为止。 
 以上方法是 *ID3* 方法，还有更好的 *C4.5* 方法，C4.5方法选用信息增益比，克服
 了ID3使用信息增益选择属性时偏向取值较多的属性的不足。 
-*** 算法实例
-**** 计算香农熵
+**** 算法实例
+***** 计算香农熵
 根据信息熵的计算公式计算某个数据集中的信息熵。一组数据dataSet包含若干特征属
 性和一个标签，即某个标签具有若干属性，每个标签和属性都有若干值。以某个标签
 为基准计算所有标签值的香农熵。数据集可以用Excel表格表示，每一行代表一个数据，
@@ -526,7 +527,7 @@ def calcShannonEnt(dataSet):
         shannonEnt -= prob * log(prob,2) #log base 2
     return shannonEnt
 #+end_src
-**** 划分数据集
+***** 划分数据集
 指按照给定的特征以及特征的值提取出这样的数据集。代码
 #+begin_src python
 # dataSet：数据集
@@ -542,7 +543,7 @@ def splitDataSet(dataSet, axis, value):
             retDataSet.append(reducedFeatVec)
     return retDataSet
 #+end_src
-**** 选择最好的划分
+***** 选择最好的划分
 在不同的特征，不同的特征值情况下，计算被splitDataSet()提取出来的数据集的香
 农熵。然后按照一定的比例计算每个特征的香农熵总和，得出按照该特征划分时的效
 果量化值。最后比较每种按特征划分后的香农熵，找出最大香农熵的一种划分方式。
@@ -573,7 +574,7 @@ def chooseBestFeatureToSplit(dataSet):
             bestFeature = i
     return bestFeature                      #returns an integer
 #+end_src
-**** 构造决策树
+***** 构造决策树
 采用递归将决策树存储在字典中，使用字典可以存在于字典中的特性。最终，字典将
 是，使用特征标签作为key，其value要么是类别标签作为树的终止叶子节点，要么是
 另一个字典，以此递归。 
@@ -623,7 +624,7 @@ def createTree(dataSet, labels):
 1. 寻找H函数：hypothesis，即模型假设；
 2. 构造J函数：即损失函数，比如最小二乘法；
 3. 求模型参数：想办法使得J函数最小求出模型参数，常用最大似然，梯度下降，这一套可以归咎为 _最优化理论_ 。
-*** 线性回归
+**** 线性回归
 最简单的回归就是线性回归，包括单变量回归，和多变量回归。一个坐标系下(可以是n维)，有若干个点，找一直线(或其他图，圆)来最
 大可能的近似这些点的走势趋势，然后使用最小二乘法等方法接触相应的参数，就是线性回归，另外线性回归 是以 高斯分布 为误差分
 析模型。用向量来表示，数据集的模型可以这样表示 $$ h_{\theta}(x)=\theta^{T}\chi$$ 也就是带了一系列的参数\(\theta\)和一系
@@ -636,7 +637,7 @@ $$ J(\theta)=\frac{\sum_{i=1}^{m}(h_{\theta}(x^{i})-y^{i})^{2}}{2}$$
 1. 最小二乘法：是一个直接的数学求解公式，不过它要求X是列满秩的；
 2. 梯度下降法：分别有梯度下降法，批梯度下降法，增量梯度下降。本质上，都是偏导数，步长/最佳学习率，更新，收敛的问题。这个
    算法只是最优化原理中的一个普通的方法；
-**** 普通最小二乘法
+***** 普通最小二乘法
 ordinary least squares的基本思想是
 - 不同的估计方法可以得到不同的样本回归参数 $\widehat{\beta_{1}}$ 和 $\widehat{\beta_{2}}$ , 所估计的 $\widehat{Y_{i}}$
   也就不同。
@@ -653,7 +654,7 @@ $$ \sum Y_{i}X_{i} = \widehat{\beta_{1}}\sum X_{i} + \widehat{\beta_{2}}\sum X_{
 用克莱姆法则求得
 $$ \widehat{\beta_{2}}=\frac{n\sum X_{i}Y_{i} - \sum X_{i}\sum Y_{i}}{n\sum X_{i}^{2}-(\sum X_{i})^{2})}$$ 
 $$ \widehat{\beta_{1}}=\frac{\sum X_{i}^{2}\sum Y_{i} - \sum X_{i}\sum Y_{i}X_{i}}{n\sum X_{i}^{2}-(\sum X_{i})^{2})}$$ 
-*** 逻辑回归
+**** 逻辑回归
 线性回归的鲁棒性很差，主要是由于线性回归在整个实数域内敏感度一样，而我们一般的数据点都是有一定范围。这时逻辑回归就用于限
 制预测范围，比如常用的sigma函数将值域限制在[0, 1]范围。所以逻辑回归其实仅为在线性回归的基础上，套用一个逻辑函数，将线性
 回归实数值域映射到一定小范围，另外逻辑回归 采用的是 伯努利分布 分析误差。
@@ -689,7 +690,7 @@ $$ \widehat{\beta_{1}}=\frac{\sum X_{i}^{2}\sum Y_{i} - \sum X_{i}\sum Y_{i}X_{i
 所以，(超)曲面，就有对多极值，并且有一个全局最大值和全局最小值。有些算法，只能在自己的小范围内搜索极大值和极小值，称为局
 部优化算法，也叫经典优化算法；有些算法，可以搜索整个(超)曲面取值范围内搜索最大值或最小值，称为全局性优化算法，也叫现代优
 化算法。
-*** 梯度下降法
+**** 梯度下降法
 #+caption: 梯度下降法图例1
 #+label: img-optimize-example1
 #+attr_latex: placement=[H] scale=0.5
@@ -768,7 +769,7 @@ plot f(x) w l lw 1
 6. 计算最佳步长：\(\min{f(x^{(0)}+s_{0}*d^{(0)})}=\min{(1-2s_{0})^{2}+4(1-8s_{0})^{2}}\);
 7. 得\(s_{0}=\frac{68}{520}\);
 8. 新点：\(x^{(1)}=(1, 1)^{T}-s_{0}(2, 8)^{T}=(0.738, -0.046)^{T}\), 返回3; 
-*** 共轭梯度法
+**** 共轭梯度法
 对于多元二次方程
 $$f(x)=\frac{X^{T}AX}{2}+B^{T}X+C$$
 求导得
