--- a/signal.org
+++ b/signal.org
@@ -58,6 +58,7 @@ g(x)的\(v=(g(0),g(1),g(2),g(3),g(4),g(5),...,g(N))\) , 现在让这两个N+1维
   定义，wt表示辐角，\([0, 2\pi]\)也就表示复数的所有辐角；
 - 冲击函数：复指数信号在实轴上的积分是冲击函数\(\delta\); 
 * 线性时不变系统
+** 概念
 线性时不变系统简称LTI系统，可以用它对单位脉冲序列的响应(h(n))来表示。
 - 离散信号可以由单位冲击响应信号来表示。式子如\ref{equ-sigma}, 其中x[k]可以
   看做常量，\(\sigma[n]\) 是冲激响应。
@@ -80,8 +81,9 @@ g(x)的\(v=(g(0),g(1),g(2),g(3),g(4),g(5),...,g(N))\) , 现在让这两个N+1维
   \end{equation}
 - 频率响应：一个脉冲响应(h(n))的离散时间傅里叶变换称为一个LTI系统的频率响应
   或传递函数.也可以理解为，脉冲响应h(n)对某频率输入信号的响应，输入信号x(n)
-  可以表示成\(e^{j\Omega{}n}\)的级数形式，也代表了x(n)具有一系列频率分量w，求一个
-  系统对复指数信号\(e^{j\Omega{}_{0}n}\)的响应时，输入信号为\(x(n)=e^{j\Omega{}_{0}n}\),
+  可以表示成\(e^{j\Omega{}n}\)的级数形式，也代表了x(n)具有一系列频率分量
+  \Omega，求一个系统对复指数信号\(e^{j\Omega{}_{0}n}\)的响应时，输入信号为
+  \(x(n)=e^{j\Omega{}_{0}n}\), 
   该响应由式子\ref{equ-ejwnhn}
   \begin{equation}
   \label{equ-ejwnhn}
@@ -103,6 +105,11 @@ g(x)的\(v=(g(0),g(1),g(2),g(3),g(4),g(5),...,g(N))\) , 现在让这两个N+1维
   \label{equ-frqzone}
   X(e^{j\Omega{}}) \Rightarrow H(e^{j\Omega{}}) \Rightarrow Y(e^{j\Omega{}})=H(e^{j\Omega{}})X(e^{j\Omega{}})
   \end{equation}
+- 系统函数：若系统的输入x(t)是一个复指数信号e^{st}, 其输出y(t)=H(s)e^{st},
+  H(s)表示为 $$H(s)=\int_{-\infty}^{\infty}h(r)e^{-sr}dr$$  
+  式子中h(t)是单位冲激响应，对于离散信号x[n]=z^{n}同理。当s和n是一般复数时，
+  H(s)和H(z)就是该系统的系统函数。当s和n是纯虚数j\Omega{}时，H(j\Omega{})就
+  是上面的频率响应。
 - 傅里叶级数，傅里叶变换，拉普拉斯变换，Z变换： _傅里叶级数_ 只能对周期信号
   进行分析，找出主要频率分量，也就是相应频率信号幅度最大(能量越大)的信号；
   傅里叶级数具有周期性的局限性，所以又有了 _傅里叶变换_ ，此时信号不必是周
@@ -126,7 +133,20 @@ $$a_{k}=\frac{1}{T}\int_{T}x(t)e^{-jk\Omega{}_{0}t}dt$$
 其中\(\Omega{}_{0}=\frac{2\pi}{T}\)，其实在周期T区间积分，也就代表在复指数
 的周期[0, 2\pi{}]积分。也就是说在复指数的完备空间[0, 2\pi{}]求x(t)具有的复
 指数分量有多少。这个复指数\(e^{j\Omega{}t}\)在所有的模拟角频率\Omega{}构成
-完备空间。所以a_{k}表示在完备空间中每个分量所占的量。
+完备空间。所以a_{k}表示在完备空间中每个分量所占的量，或者叫这些复指数信号的
+幅度为a_{k}
+*** 傅里叶变换
+**** 正变换
+$$x(t)=\frac{1}{2\pi}\int_{-\infty}^{\infty}X(jw)e^{jwt}dw$$ 
+**** 逆变换
+$$X(jw)=\int_{-\infty}^{\infty}x(t)e^{-jwt}dt$$ 
+解释通傅里叶级数的a_{k}。
+**** 关系
+- 和傅里叶级数关系：一个周期信号的傅里叶级数a_{k}能够利用其在一个周期内的信
+  号的傅里叶变换X(jw)的等间隔样本来表示。即
+  $$a_{k} = \frac{X(jw)}{T}|_{w=kw_{0}}$$ 
+**** 离散时间傅里叶变换
+
 ** 卷积
 如果一个系统的冲击响应为h(n), 表示方式如\ref{equ-hn}，可以理解为由于一个k时
 刻的单位脉冲\(\sigma{}(n-k)\)引起的系统响应为h(n-k), 而输入信号x(n)是由k从
@@ -242,6 +262,15 @@ a_{0} = \frac{\int_{-l}^{l}f(x)dx}{2l}
 a_{n} = \frac{\int_{-l}^{l}f(x)cos(\frac{n\pi x}{l})dx}{l}
 b_{n} = \frac{\int_{-l}^{l}f(x)sin(\frac{n\pi x}{l})dx}{l}
 \end{equation}
+**** 问题 
+连续时间或者离散时间周期信号的傅里叶级数的系数a_{k}是离散的
+1. 为什么连续时间和离散时间周期信号傅里叶级数的基底信号集合不一样。
+因为连续信号的周期T是实数，k不能一定满足k=T, 但是离散信号的周期是N，k肯定可
+以有有限的某个值等于N。
+2. 为什么连续时间周期信号的傅里叶变换时，积分周期是T。
+因为基底信号集是复指数信号，复指数信号在辐角[0, 2\pi{}]上是完备正交集，要求
+出每个基底信号的分量，需要在辐角[0, 2\pi{}]上做积分，但是复指数信号的角频率
+\Omega{}=2\pi{}/T, 可以将辐角的积分转换到时间的积分，这样积分区间就变成了T。
 ** 连续时间傅里叶变换(CTFT)
 令x(t)是一绝对可积的模拟信号，它的CTFT表示为
 $$X(j\Omega{}) = \int_{-\infty}^{\infty}x(t)e^{-j\Omega{}t}dt$$ 
