修改k邻近算法的说明

--- a/algorithm.org
+++ b/algorithm.org
@@ -415,11 +415,14 @@ z = 16238
 时到原点的距离都会发生变化，而这个变化是确定的，因此可以在循环运算结束后以此补偿回来，这样的话我们就同时将（ρ,θ）都计
 算出来了。 
 ** k临近算法
-K临近算法主要采用将一定的样本，规划为已知的标签，每个样本针对标签有若干的特征值，然后当有新的样本点时，计算新样本点到已
-知样本的距离，然后选取前K个距离最近的样本的标签进行投票，得票最多的标签作为该样本的标签。实例代码如下，我们有由
-createDataSet函数生成一个测试样本和标签集，其中array的每个元素代表一个已知样本，而每个已知样本的各个元素代表其特征值，
-labels给出了group的每个样本的标签；现通过classify0函数将新样本inX归类到某个标签上。 *注意:* 要运行必须要删除所有的中文注
-释。 
+K临近算法举例，已知若干电影(训练集)的标签有“爱情片”，“动作片”，而这些标 
+签大体是由这些电影中所含的打斗场景和接吻场景次数(特征)决定。现在有一部电影
+已知打斗场景和接吻场景次数，但是标签未知，需要判断。则可以计算由这些特征组
+成的样本点之间的距离，并选出离训练集中前k个最近的点，再统计这k个样本点的标
+签占比，占比多的就是该新电影的标签。实例代码如下，我们有由createDataSet函数
+生成一个测试样本和标签集，其中array的每个元素代表一个已知样本，而每个已知样
+本的各个元素代表其特征值，labels给出了group的每个样本的标签；实质上也是欧式
+距离的应用。 *注意:* 要运行必须要删除所有的中文注释。  
 #+begin_src python
 import numpy as np
 import scipy as sp
@@ -433,10 +436,10 @@ def createDataSet():
 # inX和dataSet的行向量应该是一致的
 # 每个行代表一个样本
 def classify0(inX, dataSet, labels, k):
-    # dataSet是一个numpy array，shape属性包含行数和列数，比如shape[0]给出函数，shape[1]给出列数，这里我们需要行数，它对
+    # dataSet是一个numpy array，shape属性包含行数和列数，比如shape[0]给出行数，shape[1]给出列数，这里我们需要行数，它对
     # 应于观察点(dataSet)的数目，列数对应每个点对应的特征项
     dataSetSize = dataSet.shape[0]
-    # inX是一个list，这一行表示将inX复制总共dataSetSize次，tile函数第一个参数表示需要复制的量，第二个参数表示需要负责的
+    # inX是一个list，这一行表示将inX复制总共dataSetSize次，tile函数第一个参数表示需要复制的量，第二个参数表示需要复制的
     # 形式，也就是说将inX复制dataSetSize行，1列，其维度满足dataSet
     matrExt = tile(inX, (dataSetSize, 1)) 
     # 开始计算inX和dataSet中每个样本的距离
