--- a/algorithm.org
+++ b/algorithm.org
@@ -476,7 +476,6 @@ point0 = [0, 0]
 g, l = createDataSet()
 print("resualt: %r" %classify0(point0, g, l, 3))
 #+end_src
-
 ** 决策树
 **** 信息熵
 信息熵用来衡量信息量的大小
@@ -536,7 +535,8 @@ def calcShannonEnt(dataSet):
 # dataSet：数据集
 # axis：取值x或y或z
 # value：表示某个x(yz)分量的值
-# return：返回在dataSet中删除了axis列的，数据，这些数据的axis列值等于value
+# return：返回在dataSet中删除了axis列的样本，这些样本的axis列值等于value，
+# 不等于value的样本属于另一个树分支
 def splitDataSet(dataSet, axis, value):
     retDataSet = []
     for featVec in dataSet:
@@ -547,9 +547,10 @@ def splitDataSet(dataSet, axis, value):
     return retDataSet
 #+end_src
 ***** 选择最好的划分
-在不同的特征，不同的特征值情况下，计算被splitDataSet()提取出来的数据集的香
-农熵。然后按照一定的比例计算每个特征的香农熵总和，得出按照该特征划分时的效
-果量化值。最后比较每种按特征划分后的香农熵，找出最大香农熵的一种划分方式。
+在不同的特征，不同的特征值情况下，计算被splitDataSet()提取出来的样本的香农
+熵(按样本标签计算)。然后按照该特征下每个特征值占的比例计算该特征的香农熵总
+和，再用原始熵减去这个熵得熵增益，得出按照该特征划分时的效果量化值。最后比
+较每种按特征划分后的香农熵，找出最大香农熵的一种划分方式。 
 #+begin_src python
 def chooseBestFeatureToSplit(dataSet):
     numFeatures = len(dataSet[0]) - 1      # 特征个数
