增加感知机

--- a/algorithm.org
+++ b/algorithm.org
@@ -610,6 +610,36 @@ def createTree(dataSet, labels):
         myTree[bestFeatLabel][value] = createTree(splitDataSet(dataSet, bestFeat, value), subLabels)  
     return myTree 
 #+end_src
+** 贝叶斯分类
+贝叶斯分类一般是，训练集中有若干类样本c_{i}, 每个样本有若干个特征构成特征向
+量，这样不同的特征向量构成特征向量集合v_{j}, 当我们获得新的特征向量v时，需
+要判断其属于哪个类别。贝叶斯条件概率如下 $$p(c_{i}|v)=\frac{p(v|c_{i})p(c_{i})}{p(v)}$$ 
+其中，p(c_{i}|v)表示我们有了新的特征向量v，判断其属于某个类别c的概率，在计
+算出所有类别后取其大者为v的类别。
+p(v|c_{i})表示该类别c下特征v在训练集中的概率。
+p(c_{i})表示该类别在训练集中的出现的概率。
+p(v)表示该特征v在训练集中出现的概率。
+往往我们在计算p(v|c_{i})时有困难，因为特征向量中每个特征之间可能还具有依赖
+关系，而朴素贝叶斯思想就是假定特征向量中每个特征之间是相互独立的，则
+p(v|c_{i})计算时可以计算所有子特征在类别c下的概率乘积。例如
+某个医院早上收了六个门诊病人，如下表。
+|--------------+------------+--------|
+| 症状　       | 　职业　　 | 　疾病 |
+|--------------+------------+--------|
+| 　　打喷嚏　 | 护士　　　 | 感冒   |
+| 　　打喷嚏　 | 农夫　　　 | 过敏   |
+| 　　头痛　　 | 建筑工人　 | 脑震荡 |
+| 　　头痛　　 | 建筑工人　 | 感冒   |
+| 　　打喷嚏　 | 教师　　　 | 感冒   |
+| 　　头痛　　 | 教师　　　 | 脑震荡 |
+|--------------+------------+--------|
+现在又来了第七个病人，是一个打喷嚏的建筑工人。请问他患上感冒的概率有多大？
+根据贝叶斯定理得P(感冒|打喷嚏*建筑工人)=P(打喷嚏*建筑工人|感冒)*P(感冒)/P(打
+喷嚏*建筑工人) , 假定"打喷嚏"和"建筑工人"这两个特征是独立的，因此，上面的等
+式就变成了P(感冒|打喷嚏*建筑工人)=P(打喷嚏|感冒)*P(建筑工人|感冒)*P(感冒)/P(打
+喷嚏)*P(建筑工人) 最终计算得P(感冒|打喷嚏*建筑工人)=0.66*0.33*0.5/0.5*0.33=0.66  
+因此，这个打喷嚏的建筑工人，有66%的概率是得了感冒。同理，可以计算这个病人患
+上过敏或脑震荡的概率 
 ** 支持向量机(SVM)
 ** 回归分析
 回归是一种极易理解的模型，就相当于\(y=f(x)\)，表明自变量x与因变量y的关系。最常见问题有如医生治病时的望、闻、问、切，之后
@@ -685,6 +715,38 @@ $$ \widehat{\beta_{1}}=\frac{\sum X_{i}^{2}\sum Y_{i} - \sum X_{i}\sum Y_{i}X_{i
      0, x < c
      \end{aligned}
      $$
+*** 概念
+- 超平面：n维超平面的表达方式为\(f(X)=W^{T}X+B\), 其中W和X都是n维向量，一般
+  W表示权重向量同时也是超平面的法向量，X表示特征向量，B表示超平面的偏置或者截距；
+- 点到超平面距离：根据几何知识x_{0}到f(X)的距离可以表示如下，分子是x_{0}带
+  入f(X)求绝对值，分母是法向量的二范数。
+  $$L=\frac{|f(x_{0})|}{||W||}$$
+- 损失函数：又叫代价函数也叫错误函数
+
+*** 感知机
+感知机（perceptron）是一种二类分类的线性分类模型，也就是说，使用于将数据分
+成两类的，并且数据要线性可分的情况。线性可分是指存在一个超平面能够将空间分
+成两部分，每一部分为一类，感知机的目的就在于找这样的一个超平面。 
+假设输入数据形式为\(x=(x_{1},x_{2}....x_{n})\),即所谓的特征向量。y代表输入
+数据的类别，为{+1，-1}，感知机的形式为\(f(x)=sign(w*x+b)\),当w*x+b>=0时，
+f(x)=+1,当w*x+b<0时，f(x)=-1. 
+f(x)就是我们对输入数据的分类，感知机的目的就在于找到合适的w和b，使得f(x)能
+正确分类。w是和x维数相同的向量（一个是行向量，一个是列向量），w是我们求的超
+平面的法向量，b是超平面的截距。 定义损失函数：误分类点到超平面的总距离（不
+定成误分类的点的个数是因为这样损失函数对w,b不是连续可导，不易优化），假设误
+分类点为0，那么总距离为0. 空间中任意一点到超平面的距离为|w*x+b|/(||w||),我
+们只要使得分子部分变成0就行。 对于误分类点\((x_{i},y_{i})\)来说，如果
+\(w*x_{i}+b>=0\),本应该为+1，但是误分类的话\(y_{i}=-1\),如果
+\(w*x_{i}+b<0\),本应该为-1，但是误分类的话\(y_{i}=+1\),这样我们就能得到
+\(-y_{i}(w*x_{i}+b)>0\),即我们可以使对误分类点的\(-y_{i}(w*x_{i}+b)\)求和，
+使之最小化，当然这里是指变成0.  
+那么具体是如何求w,b的呢？（下面是感知机算法的原始形式）
+1. 首先任意选一个超平面w0,b0(w是向量，里面元素都为0); 
+2. 然后采用梯度下降法不断的极小化目标函数，在这里具体来说就是每次取一个误分
+   类的点\((x_{i},y_{i})\),令\(w=w+ny_{i}x_{i},b = b+ny_{i}\), 可以这么理解，
+   每当有一个误分类点，我们就把平面往这个误分类点的方向移动一些，使得它能够
+   被正确分类，0<n<=1,n被称为学习率
+3. 重复步骤2，直至没有误分类点，即损失函数为0.
 ** 最优化
 许多实际问题利用数学建模的方法得到下面常规的优化形式：\(min f(x), x\in{D}\), 其中x是n维矢量，D是问题的定义域，F是可行域。
 关于f(x)
