概率的两种观点

--- a/math.org
+++ b/math.org
@@ -335,6 +335,12 @@ $$
 *** 镜像
 *** 切变
 * 概率
+概率有两种定义观点。
+- 频率观点：概率被认为是重复进行n次试验，某事件发生的频率，当n趋于无穷时，频率
+  趋于概率。即试验具有重复性，符合人们日常的观念。
+- 贝叶斯观点：贝叶斯观点认为概率用于量化某些事件的不确定性。也就是不一定需
+  要重复实验也能计算出，比如两级冰川在某年融化完的概率，肯定是不能用频率观
+  点解释。
 ** 概念
 - 样本空间：随机试验的所有可能结果组成的集合，在表示时一般一行的数据表示一个样本，一列的数据表示一个属性(或维度)的数据，
   例如X, Y是两个属性(维度)，有样本\(x_{1}=(1, 2)^{T}, x_{2}=(3, 6)^{T}, x_{3}=(4, 2)^{T}, x_{4}=(5, 2)^{T}\), 则X表示x轴
