--- a/signal.org
+++ b/signal.org
@@ -67,7 +67,9 @@ g(x)的\(v=(g(0),g(1),g(2),g(3),g(4),g(5),...,g(N))\) , 现在让这两个N+1维
   输入信号，则称该信号为系统的特征函数；
 - 复指数信号：\(e^{j\Omega{}t}\)在\([0, 2\pi]\)上构成完备正交集，见数学中对复数的
   定义，wt表示辐角，\([0, 2\pi]\)也就表示复数的所有辐角；
-- 冲击函数：复指数信号在实轴上的积分是冲击函数\(\delta\); 
+- 冲击函数：复指数信号在实轴上的积分是冲击函数\(\delta\);
+- 谱熵：谱熵反映了谱的集中程度，谱熵越小表示谱越集中，谱熵越大，表示谱的不
+  确定性越大，信号越复杂，谱在各频率成分上越均匀；
 * 线性时不变系统
 ** 概念
 线性时不变系统简称LTI系统，可以用它对单位脉冲序列的响应(h(n))来表示。
