--- a/math.org
+++ b/math.org
@@ -342,81 +342,128 @@ $$
   要重复实验也能计算出，比如两级冰川在某年融化完的概率，肯定是不能用频率观
   点解释。
 ** 概念
-- 样本空间：随机试验的所有可能结果组成的集合，在表示时一般一行的数据表示一个样本，一列的数据表示一个属性(或维度)的数据，
-  例如X, Y是两个属性(维度)，有样本\(x_{1}=(1, 2)^{T}, x_{2}=(3, 6)^{T}, x_{3}=(4, 2)^{T}, x_{4}=(5, 2)^{T}\), 则X表示x轴
-  可能出现的数，Y表示Y轴可能出现的数，所以X，Y维度的数据为\(X=(1, 3, 4, 5)^{T}, Y=(2, 6, 2, 2)^{T}\); 
-- 随机变量：打靶打入XY坐标系，打入的位置是个二维随机变量(x, y), 随机变量不是一个概率;随机变量分为：
+- 样本空间：随机试验的所有可能结果组成的集合，在表示时一般一行的数据表示一
+  个样本，一列的数据表示一个属性(或维度)的数据，例如X, Y是两个属性(维度)，
+  有样本\(x_{1}=(1, 2)^{T}, x_{2}=(3, 6)^{T}, x_{3}=(4, 2)^{T}, x_{4}=(5,
+  2)^{T}\), 则X表示x轴可能出现的数，Y表示Y轴可能出现的数，所以X，Y维度的数
+  据为\(X=(1, 3, 4, 5)^{T}, Y=(2, 6, 2, 2)^{T}\);  
+- 随机变量：打靶打入XY坐标系，打入的位置是个二维随机变量(x, y), 随机变量不
+  是一个概率;随机变量分为： 
   1. 离散随机变量：只能取有限个值，虽然可以是无穷多的，但是是离散化的；
   2. 连续型随机变量：可以取无穷多的连续值；
 - 概率函数：对于随机变量X的概率叫概率函数: $$ p_{i} = P(X = a_{i}), i = 1,...,n $$ 
-- 概率分布：概率函数给出了全部概率1是如何在其可能值之间分配的,  _其实可以将概率分布和概率函数等同认识_ ；
-- 分布函数： _可以认为是概率函数在区间段的求和_ , 设X为一随机变量，则分布函数为 $$P(X \leq x) = F(x), -\infty < x < \infty$$
-- 联合分布：随机变量X和Y的联合分布是设(X,Y)是二维随机变量，对于任意实数x, y; 二元函数\(F(x, y)=P{X<x\cap Y<y}=P(X<=x,Y<=y)\)
-- 概率密度函数：如果对于随机变量X的分布函数F(x),存在非负可积函数f(x)，使对于任意实数x有 
-  $$F(x) = \int_{\infty}^{x}f(t)dt $$ 则f(x)称为X的概率密度函数，简称概率密度, 只有在x点处连续，才有f(x)=F'(x)； 
-- 等可能概型中事件A的计算公式： $$P(A) = \sum_{j=1}^{k}P({e_{i_{j}}})=\frac{k}{n}=\frac{A包含的基本事件数}{S中基本事件的总数} $$
-- 条件概率：事件A已经发生的条件下，事件B发生的概率，表示为$$P(B|A)=\frac{P(AB)}{P(A)}$$
-- 互斥时间和的概率：等于各事件概率的和： $P(A_{1}+A_{2}+...+A_{n}) = P(A_{1})+P(A_{2})+...+P(A_{n})$
+- 概率分布：概率函数给出了全部概率1是如何在其可能值之间分配的,  _其实可以将_
+  _概率分布和概率函数等同认识_ ； 
+- 分布函数： _可以认为是概率函数在区间段的求和_ , 设X为一随机变量，则分布函
+  数为 $$P(X \leq x) = F(x), -\infty < x < \infty$$ 
+- 联合分布：随机变量X和Y的联合分布是设(X,Y)是二维随机变量，对于任意实数x,y;
+  二元函数\(F(x, y)=P{X<x\cap Y<y}=P(X<=x,Y<=y)\)  
+- 概率密度函数：如果对于随机变量X的分布函数F(x),存在非负可积函数f(x)，使对
+  于任意实数x有$$F(x) = \int_{\infty}^{x}f(t)dt $$ 则f(x)称为X的概率密度函
+  数，简称概率密度, 只有在x点处连续，才有f(x)=F'(x)；  
+- 等可能概型中事件A的计算公式： $$P(A) =
+  \sum_{j=1}^{k}P({e_{i_{j}}})=\frac{k}{n}=\frac{A包含的基本事件数}{S中基本
+  事件的总数} $$ 
+- 条件概率：事件A已经发生的条件下，事件B发生的概率，表示为,AB表示A和B交集的 
+  部分$$P(B|A)=\frac{P(AB)}{P(A)}$$ 
+- 互斥时间和的概率：等于各事件概率的和： $P(A_{1}+A_{2}+...+A_{n}) =
+  P(A_{1})+P(A_{2})+...+P(A_{n})$ 
 - 对立事件A的概率：$P(\overline{A}) = 1 - P(A)$
-- 独立事件的概率：若干个独立事件 $A_{1},...,A_{n}$ 之积的概率，等于各事件概率的乘积：$P(A_{1}...A_{n}) = P(A_{1})...P(A_{n})$
-- 全概率：其意义在于在较复杂的情况下直接计算A事件概率P(A)不容易，但是A事件总是随某个B_{i}发生，则适当去构造这组B_{i}可以简化
-  计算。其公式如下，其中用到了条件概率公式, 此公式还能从另一个角度去理解，把B_{i}看做导致事件A发生的一种可能途径，对不同途
-  径，A发生的概率即条件概率P(A|B)各不同，而采取哪个途径g却是随机的。 
-  $$ P(A)=P(AB_{1})+...+P(AB_{n}) = P(B_{1})P(A|B_{1})+...+P(B_{n})P(A|B_{n}) $$
-- 贝叶斯公式：刻画了一些事件B_{i}其原有发生概率在事件A引入的条件下B_{i}的概率发生了改变；如果把事件A看成结果，把诸事件B_{i}看
-  成导致结果A的可能原因，则全概率公式可以看做为“由原因推结果”，而贝叶斯公式则相反为“由结果推原因”，现在有结果A已经发
-  生了，在众多原因B_{i}中到底由哪个导致，贝叶斯公式可以给出度量，类似于发生了某个案件A，在不了解案情前，嫌疑人B_{i}根据以往
-  的记录其作案的概率为P(B_i)，但是如果了解了A案情，则P(B_i)就会变动了；贝叶斯公式用语言表达为，
-  $$ 后验概率 = \frac{似然函数因子*先验概率}{证据因子}$$ 或者 $$ P(原因i|结果) = \frac{P(结果|原因i)*P(原因i)}{P(结果)}$$ 
-  贝叶斯公式如下：设试验E的样本空间为S，A为E的事件，B_{i}为S的一个划分，且P(A)>0, P(B_{i})>0, 则A事件发生情况下，A来自
-  B_{i}划分的概率如下公式，其中P(B_{i})可以通过训练集中各个样本所在的比例来估计，而P(A|B_{i})需要做估计，一般分为
-  1. 参数估计：是先假定P(A|B_{i})已经具有某确定的分布形式，比如正太，再用已经具有类别标签的训练集对概率分布的参数进行估
-     计；
-  2. 非参数估计：非参数是在不知道或者不假设类条件概率密度的分布形式的基础上，直接用样本集中所包含的信息来估计样本的概率
-     分布情况。 
+- 独立事件的概率：若干个独立事件 $A_{1},...,A_{n}$ 之积的概率，等于各事件概
+  率的乘积：$P(A_{1}...A_{n}) = P(A_{1})...P(A_{n})$ 
+- 全概率：其意义在于在较复杂的情况下直接计算A事件概率P(A)不容易，但是A事件
+  总是随某个B_{i}发生，则适当去构造这组B_{i}可以简化计算。其公式如下，其中
+  用到了条件概率公式, 此公式还能从另一个角度去理解，把B_{i}看做导致事件A发
+  生的一种可能途径，对不同途径，A发生的概率即条件概率P(A|B)各不同，而采取哪
+  个途径g却是随机的。$$ P(A)=P(AB_{1})+...+P(AB_{n}) =
+  P(B_{1})P(A|B_{1})+...+P(B_{n})P(A|B_{n}) $$ 
+- 贝叶斯公式：刻画了一些事件B_{i}其原有发生概率在事件A引入的条件下B_{i}的概
+  率发生了改变；如果把事件A看成结果，把诸事件B_{i}看成导致结果A的可能原因，
+  则全概率公式可以看做为“由原因推结果”，而贝叶斯公式则相反为“由结果推原
+  因”，现在有结果A已经发生了，在众多原因B_{i}中到底由哪个导致，贝叶斯公式
+  可以给出度量，类似于发生了某个案件A，在不了解案情前，嫌疑人B_{i}根据以往
+  的记录其作案的概率为P(B_i)，但是如果了解了A案情，则P(B_i)就会变动了；贝叶
+  斯公式用语言表达为，$$ 后验概率 = \frac{似然函数因子*先验概率}{证据因子}$$
+  或者 $$ P(原因i|结果) = \frac{P(结果|原因i)*P(原因i)}{P(结果)}$$ 贝叶斯公
+  式如下：设试验E的样本空间为S，A为E的事件，B_{i}为S的一个划分，且P(A)>0,
+  P(B_{i})>0, 则A事件发生情况下，A来自B_{i}划分的概率如下公式，其中P(B_{i})
+  可以通过训练集中各个样本所在的比例来估计，而P(A|B_{i})需要做估计，一般分
+  为 
+  1. 参数估计：是先假定P(A|B_{i})已经具有某确定的分布形式，比如正太，再用已
+     经具有类别标签的训练集对概率分布的参数进行估计；
+  2. 非参数估计：非参数是在不知道或者不假设类条件概率密度的分布形式的基础上，
+     直接用样本集中所包含的信息来估计样本的概率分布情况。  
   $$P(B_{i}|A) = \frac{P(AB_{i})}{P(A)} = \frac{P(B_{i})P(A|B_{i})}{\sum_{j}P(B_{j})P(A|B_{j})}$$
-- 先验概率：一般从原因推结果的论证称为先验的, 如果一个事件(W)发生的原因(a_{ij})有很多，则P(W)叫先验概率, 通常是我们在没
-  有分析这些原因前根据自己的经验决定的概率，P(W|a_{ij})叫后验概率，在分析原因后对结果概率做的修正概率; 
-- 后验概率：一般从结果推原因的论证称为后验的，以堵车为例，堵车的原因假定有车辆太多和交通事故，堵车的概率可以按照以往的经
-  验得到，这个概率就是先验概率，那若出门前听到新闻说今天路上出现了交通事故，然后我们计算堵车的概率，这个就是条件概率即
-  P(堵车|交通事故)，这是由因求果，或者在出门前我们知道了路上发生了交通事故，并且车辆很多，然后计算堵车的概率，这下就要用
-  全概率公式计算；如果我们已经出门，出现了堵车，那么我们想计算这次堵车由交通事故引起的概率是多少，就是后验概率，也可以说
-  是条件概率，P(交通事故|堵车)，这是由果求因；
-- 期望值：也称均值，$\overline{X} = \frac{\sum_{i=1}^{n} X_{i}}{n}$, 如果知道每个点x的概率f(x)，则可以写为 $E(X) = \sum
-  x_{k}f(x_{x})$, 描述的是样本集合的中间点，平均值；
-- 方差：标准差为方差的开方，令u=E(X)为均值，定义X的方差Var(X)=E((X-u)^2)=E(X^2)-u^2, 另外针对样本集还可以这样计算，方差
-  $V^{2}=\frac{\sum_{i=1}^{n}(X_{i}-\overline{X})}{n-1}$ , 描述了各个点x相对于均值的离散度；
-- 协方差：期望值和方差一般用来描述一维的数据，但是当两个,多个随机变量可能存在一定关系时, 比如男孩的猥琐程度和受女孩子喜
-  欢的程度，就需要协方差来衡量，方差只可能为非负，但是协方差可以为正、0、负，从而引出了正相关、相互独立、负相关，如果协
-  方差为正，代表男孩越猥琐越受欢迎，如果为负代表男孩越猥琐越不受欢迎，如果为0代表两者无关。协方差的定义公式类似方差
-  $cov(X,Y) = \frac{\sum_{i=1}^{n}(X_{i}-\overline{X})(Y_{i}-\overline{Y})}{n-1}$; 如果面对多维的情况时，协方差也没法独
-  自描述，这时就需要协方差矩阵进行描述矩阵的元素为两两随机变量的协方差, 协方差矩阵是描述不同维度间的协方差关系, 而不是不
-  同样本间的关系，一般样本数据集，一行表示一个样本，一列表示一个属性，在计算协方差矩阵时必须以列为计算;   
+- 先验概率：一般从原因推结果的论证称为先验的, 如果一个事件(W)发生的原因
+  (a_{ij})有很多，则P(W)叫先验概率, 通常是我们在没有分析这些原因前根据自己
+  的经验决定的概率，P(W|a_{ij})叫后验概率，在分析原因后对结果概率做的修正概
+  率;  
+- 后验概率：一般从结果推原因的论证称为后验的，以堵车为例，堵车的原因假定有
+  车辆太多和交通事故，堵车的概率可以按照以往的经验得到，这个概率就是先验概
+  率，那若出门前听到新闻说今天路上出现了交通事故，然后我们计算堵车的概率，
+  这个就是条件概率即P(堵车|交通事故)，这是由因求果，或者在出门前我们知道了
+  路上发生了交通事故，并且车辆很多，然后计算堵车的概率，这下就要用全概率公
+  式计算；如果我们已经出门，出现了堵车，那么我们想计算这次堵车由交通事故引
+  起的概率是多少，就是后验概率，也可以说是条件概率，P(交通事故|堵车)，这是
+  由果求因； 
+- 期望值：也称均值，$\overline{X} = \frac{\sum_{i=1}^{n} X_{i}}{n}$, 如果知
+  道每个点x的概率f(x)，则可以写为 $E(X) = \sum{x_{k}f(x_{x})}$, 描述的是样
+  本集合的中间点，平均值； 
+- 方差：标准差为方差的开方，令u=E(X)为均值，定义X的方差
+  Var(X)=E((X-u)^2)=E(X^2)-u^2, 另外针对样本集还可以这样计算，方差
+  $V^{2}=\frac{\sum_{i=1}^{n}(X_{i}-\overline{X})}{n-1}$ , 描述了各个点x相
+  对于均值的离散度； 
+- 协方差：期望值和方差一般用来描述一维的数据，但是当两个,多个随机变量可能存
+  在一定关系时, 比如男孩的猥琐程度和受女孩子喜欢的程度，就需要协方差来衡量，
+  方差只可能为非负，但是协方差可以为正、0、负，从而引出了正相关、相互独立、
+  负相关，如果协方差为正，代表男孩越猥琐越受欢迎，如果为负代表男孩越猥琐越
+  不受欢迎，如果为0代表两者无关。协方差的定义公式类似方差$cov(X,Y) =
+  \frac{\sum_{i=1}^{n}(X_{i}-\overline{X})(Y_{i}-\overline{Y})}{n-1}$; 如果
+  面对多维的情况时，协方差也没法独自描述，这时就需要协方差矩阵进行描述矩阵
+  的元素为两两随机变量的协方差, 协方差矩阵是描述不同维度间的协方差关系, 而
+  不是不同样本间的关系，一般样本数据集，一行表示一个样本，一列表示一个属性，
+  在计算协方差矩阵时必须以列为计算;  
 #<<math-relevance>>
-- 总体线性相关系数: X和Y的总体线性相关系数,其中Var(X)，Var(Y)为X,Y的方差，Cov(X, Y)为X和Y的协方差； 
+- 总体线性相关系数: X和Y的总体线性相关系数,其中Var(X)，Var(Y)为X,Y的方差，
+  Cov(X, Y)为X和Y的协方差；  
   $$ \rho = \frac{Cov(X,Y)}{\sqrt{Var(X)Var(Y)}}$$
-- 样本线性相关系数: X和Y的样本线性相关系数，其中X_{i}和Y_{i}分别是变量X和Y的样本观测值， $\overline{X}, \overline{Y}$ 分别是
-  变量X和Y样本值的平均值；
+- 样本线性相关系数: X和Y的样本线性相关系数，其中X_{i}和Y_{i}分别是变量X和Y
+  的样本观测值， $\overline{X}, \overline{Y}$ 分别是  变量X和Y样本值的平均
+  值； 
   $$ r_{XY}=\frac{\sum(X_{i}-\overline{X})(Y_{i}-\overline{Y})}{\sqrt{\sum(X_{i}-\overline{X})^{2}\sum(Y_{i}-\overline{Y})^{2}}}$$
-- 条件分布：当被解释量X取某固定值时(条件)，Y的值不确定，Y的不同取值形成一定的分布，这就是Y的分布；
+- 条件分布：当被解释量X取某固定值时(条件)，Y的值不确定，Y的不同取值形成一定
+  的分布，这就是Y的分布； 
 - 条件概率：X取某固定值时，Y取不同值的概率称为条件概率；
-- 条件期望：对于X的每个取值，对Y所形成的分布确定其期望或者均值，称为Y的条件期望或条件均值，用E(Y|X_i)表示, 见图\ref{img-cond-exp}所示；
-- 回归线：对于每个X的取值X_{i}, 都有Y的条件期望E(Y|X_i)与之对应，代表Y的条件期望的点的轨迹形成的直线或者曲线称为回归线, 见
+- 条件期望：对于X的每个取值，对Y所形成的分布确定其期望或者均值，称为Y的条件
+  期望或条件均值，用E(Y|X_i)表示, 见图\ref{img-cond-exp}所示； 
+- 回归线：对于每个X的取值X_{i}, 都有Y的条件期望E(Y|X_i)与之对应，代表Y的条
+  件期望的点的轨迹形成的直线或者曲线称为回归线, 见 
   图\ref{img-cond-exp}所示；
   #+caption: 回归实例
   #+label: img-cond-exp
   #+attr_latex: placement=[H] scale = 0.4
   [[./img/cond-exp-plot.jpg]]
-- 回归函数：被解释变量Y的条件期望E(Y|X_i)随解释变量X的变化而有规律的变化，如果把Y的条件期望表现为X的如下函数，这个函数称
-  为回归函数, 回归函数又分为总体回归函数和样本回归函数；$$ E(Y|X_{i}) = f(X_{i})$$
-- 无偏估计：用期望值来阐述，对于一个总体空间的期望值为U，由于各种原因没办法或者不方便获得这个期望值参数U，但是我们可以通
-  过总体空间的一个样本空间的u来估计总体空间的U，一般情况下u是不等于U的，但是总体空间可以划分出若干多个样本空间，也就可以
-  获得多个u，对于这么多个u，其实也是一个随机变量，如果这个随机变量的期望值等于总体空间的U，则可以说对我们划分的样本空间，
-  可以对总体空间的期望值做无偏估计；官方语言组织叫，参数的样本估计值的期望值等于参数的真实值。估计量的数学期望等于被估计
-  参数，则称此为无偏估计 ；
-- 中心极限定理：对于独立的随机变量序列\(X_{1}, X_{2}...X_{n}\), 不管X_{i}服从什么分布，只要它们是同分布，且有有限的数学
-  期望\(E(X_{i})=\mu\)和方差\(D(X_{i})=\sigma^{2}\)那么，当n充分大时, 其服从的分布如下，并且还可以转换成标准正态分布。
-  $$ \sum_{i=1}^{n}X_{i} \sim N(n\mu, n\sigma^{2})$$ 
+- 回归函数：被解释变量Y的条件期望E(Y|X_i)随解释变量X的变化而有规律的变化，
+  如果把Y的条件期望表现为X的如下函数，这个函数称为回归函数, 回归函数又分为
+  总体回归函数和样本回归函数；$$ E(Y|X_{i}) = f(X_{i})$$ 
+- 无偏估计：用期望值来阐述，对于一个总体空间的期望值为U，由于各种原因没办法
+  或者不方便获得这个期望值参数U，但是我们可以通过总体空间的一个样本空间的u
+  来估计总体空间的U，一般情况下u是不等于U的，但是总体空间可以划分出若干多个
+  样本空间，也就可以获得多个u，对于这么多个u，其实也是一个随机变量，如果这
+  个随机变量的期望值等于总体空间的U，则可以说对我们划分的样本空间，可以对总
+  体空间的期望值做无偏估计；官方语言组织叫，参数的样本估计值的期望值等于参
+  数的真实值。估计量的数学期望等于被估计参数，则称此为无偏估计 ； 
+- 中心极限定理：对于独立的随机变量序列\(X_{1}, X_{2}...X_{n}\), 不管X_{i}服
+  从什么分布，只要它们是同分布，且有有限的数学期望\(E(X_{i})=\mu\)和方差
+  \(D(X_{i})=\sigma^{2}\)那么，当n充分大时, 其服从的分布如下，并且还可以转
+  换成标准正态分布。$$ \sum_{i=1}^{n}X_{i} \sim N(n\mu, n\sigma^{2})$$
+- KL散度：relative entropy，也叫KL散度，用于度量两个概率分布（p，q）的不相
+  似性。定义为$$ KL(p||q)=\sum_{k=1}^{K}p_{k}\log{\frac{p_{k}}{q_{k}}} = 
+  \sum_{k}p_{k}\log{p_{k}}-\sum_{k}p_{k}\log{q_{k}}$$
+- 交叉熵：KL散度式子中第二项\sum_{k}p_{k}\log{q_{k}}就是交叉熵。当使用某个
+  概率分布为q的模型编码信源，概率分布为p，模型需要定义编码表，而交叉熵是度
+  量编码表的平均bit数；同时KL散度也就如果用真实的模型来编码信源和用近似模型
+  编码信源所用bit数的差；
 ** 排列组合
 - 排列：n个相异事物取r个(1<=r<=n)的不同排列总数，为 $P_{r}^{n} = n(n-1)(n-2)...(n-r+1)$ , 如果r=n，则 $P_{r}^{r} = r!$
 - 组合：n个相异物件取r个(1<=r<=n)的不同组合总数，为 $C_{r}^{n}=\frac{P_{r}^{n}}{r!}=\frac{n!}{r!(n-r)!}$
@@ -490,11 +537,14 @@ plt.show()                      #显示出来
 **** \beta分布
 * 统计
 ** 概念
-- 样本分类：样本具有特征向量，样本属于某个类别，如果在坐标系中表示，则特征向量的分量表示坐标系的各个轴，由各个特征量具体
-  的特征值得出的坐标系中的点，就是样本，而对各个样本进行画圈分类，则表示对样本进行分类，有两种分类；
-  1. 确定性分类：表示每个样本点确定的只属于某个类别，不属于另一个类别，这样的分类具有明显的界限；
-  2. 随机性分类：表示某个样本点属于某个类别的概率为多少，该样本点也有可能属于另一个类别，属于另一个概率，通过比较各个概
-     率值大小来判断该样本点属于哪个类别，一般这时候采用贝叶斯公式进行分类；
+- 样本分类：样本具有特征向量，样本属于某个类别，如果在坐标系中表示，则特征
+  向量的分量表示坐标系的各个轴，由各个特征量具体的特征值得出的坐标系中的点，
+  就是样本，而对各个样本进行画圈分类，则表示对样本进行分类，有两种分类； 
+  1. 确定性分类：表示每个样本点确定的只属于某个类别，不属于另一个类别，这样
+     的分类具有明显的界限； 
+  2. 随机性分类：表示某个样本点属于某个类别的概率为多少，该样本点也有可能属
+     于另一个类别，属于另一个概率，通过比较各个概率值大小来判断该样本点属于
+     哪个类别，一般这时候采用贝叶斯公式进行分类； 
 - 算术平均值：算术平均值是期望值的无偏估计量；
   $$ \overline{x} = \frac{x_{1}+...+x_{n}}{n} = \frac{\sum_{i=1}^{n}x_{i}}{n}$$
 - 均方根平均值： $$ \overline{x}=\sqrt{\frac{x_{1}^{2}+...+x_{n}^{2}}{n}}=\sqrt{\frac{\sum_{i=1}^{n}x_{i}^{2}}{n}}$$
@@ -502,33 +552,40 @@ plt.show()                      #显示出来
 - 对数平均值: $$ \overline{x}=\frac{x_{1}-x_{2}}{\ln{x_{1}-\ln{x_{2}}}}$$
 - 加权平均值： $$ \overline{x}=\frac{w_{1}x_{1}+...+w_{n}x_{n}}{w_{1}+...+w_{n}}=\frac{\sum{w_{i}x_{i}}}{\sum{w_{i}}}$$
 - 残差：也叫剩余值，residual，表示实际值Y与回归线上的估计值Y'的纵向距离Y-Y', 一般Y'用E(Y)；
-- SSE:和方差，是拟合数据和原始数据对应点的误差的平方和，SSE越接近于0，说明模型选择和拟合更好，数据预测也越成功。接下来的
-  MSE和RMSE因为和SSE是同出一宗，所以效果一样, y_{i}表示实际值， $\widehat{y_{i}}$ 表示估计值，计算公式； 
+- SSE:和方差，是拟合数据和原始数据对应点的误差的平方和，SSE越接近于0，说明
+  模型选择和拟合更好，数据预测也越成功。接下来的MSE和RMSE因为和SSE是同出一
+  宗，所以效果一样, y_{i}表示实际值， $\widehat{y_{i}}$ 表示估计值，计算公式；  
   $$ SSE = \sum_{i=1}^{n}w_{i}(y_{i}-\widehat{y_{i}})^{2}$$
-- MSE: 均方差，是预测数据和原始数据对应点误差的平方和的均值，也就是SSE/n，和SSE没有太大的区别，计算公式；
+- MSE: 均方差，是预测数据和原始数据对应点误差的平方和的均值，也就是SSE/n，
+  和SSE没有太大的区别，计算公式； 
   $$ MSE = SSE/n$$
 - RMSE:均方根，也叫回归系统的拟合标准差，是MSE的平方根，就算公式如下；
   $$ RMSE = \sqrt{MSE}$$
-- SSR: Sum of squares of the regression，即预测数据与原始数据均值之差的平方和, $\overline{y_{i}}$ 数据的平均值，公式如下
+- SSR: Sum of squares of the regression，即预测数据与原始数据均值之差的平方
+  和, $\overline{y_{i}}$ 数据的平均值，公式如下 
   $$ SSR=\sum_{i=1}^{n}w_{i}(\widehat{y_{i}}-\overline{y_{i}})^{2}$$
 - SST：Total sum of squares，即原始数据和均值之差的平方和，公式如下；
   $$ SST=\sum_{i=1}^{n}w_{i}(y_{i}-\overline{y_{i}})^{2}$$ 
-- R-square: 确定系数, 定义为SSR和SST的比值，取值范围为[0, 1],越接近1，表明方程的变量对y的解释能力越强，模型对数据拟合的
-  越好，公式如下；
+- R-square: 确定系数, 定义为SSR和SST的比值，取值范围为[0, 1],越接近1，表明
+  方程的变量对y的解释能力越强，模型对数据拟合的越好，公式如下；
   $$ R-square = \frac{SSR}{SST}=\frac{SST-SSE}{SST}=1-\frac{SSE}{SST}$$
-- 最大似然估计： 似然估计是在每个事件x_{i}的概率分布确定p(x_{i})，但是参数未知的情况下的一种估计方式，因为如果我们确定了
-  这个参数，那么我们采集到的这些事件样本发生的概率应该最大，即p(x_{1})*...*p(x_{n})最大，具体解时可以采用log方式转换, 最
-  大似然估计还可以这样理解，即，我们观察到的结果最容易是哪个因素引起的，比如手写识别时，就是要找出哪个单词最大概率导致出
-  这个手写样本产生，最大似然代表最能满足样本的模型情况；要采用似然估计，必须满足一定条件；
+- 最大似然估计： 似然估计是在每个事件x_{i}的概率分布确定p(x_{i})，但是参数
+  未知的情况下的一种估计方式，因为如果我们确定了这个参数，那么我们采集到的
+  这些事件样本发生的概率应该最大，即p(x_{1})*...*p(x_{n})最大，具体解时可以
+  采用log方式转换, 最大似然估计还可以这样理解，即，我们观察到的结果最容易是
+  哪个因素引起的，比如手写识别时，就是要找出哪个单词最大概率导致出这个手写
+  样本产生，最大似然代表最能满足样本的模型情况；要采用似然估计，必须满足一
+  定条件； 
   1. 事件x_{i}的概率分布确定，这样待估参数是确定性的未知量；
   2. 每个样本是独立的，这样才能使用概率乘法；
   3. 如果待估参数是多维的，那么每个类别的样本x_{i}，不包含另一个类别中信息；
-- 奥卡姆剃刀：如果两个理论具有相似的解释力度，那么优先选择那个更简单的，因为，往往越简单越常见，越繁复越少见，一般代表先
-  验概率最大的模型情况；
-- 损失函数：loss function，也叫错误函数，代价函数。指我们的估计模型的输出值y与真实值之间的偏差，x是输入数据，y(x)是推测
-  出结果的模型，t是x对应的真实结果，y(x)是t的估计值，则损失函数表示为L(t, y(x)), 我们常用的损失函数有
-  1. 平方差函数 $$ L(t, y(x)) = [y(x)-t]^{2}$$ 通常在进行度量时，使用损失函数的平均值E(L)来衡量
-     $$ E(L) = \iint L(t, y(x))p(y,x)\mathrm{d}x\mathrm{d}y$$
+- 奥卡姆剃刀：如果两个理论具有相似的解释力度，那么优先选择那个更简单的，因
+  为，往往越简单越常见，越繁复越少见，一般代表先验概率最大的模型情况； 
+- 损失函数：loss function，也叫错误函数，代价函数。指我们的估计模型的输出值
+  y与真实值之间的偏差，x是输入数据，y(x)是推测出结果的模型，t是x对应的真实
+  结果，y(x)是t的估计值，则损失函数表示为L(t, y(x)), 我们常用的损失函数有 
+  1. 平方差函数 $$ L(t, y(x)) = [y(x)-t]^{2}$$ 通常在进行度量时，使用损失函
+     数的平均值E(L)来衡量$$ E(L) = \iint L(t, y(x))p(y,x)\mathrm{d}x\mathrm{d}y$$
   2. 0-1损失函数
      $$ L(t, y(x))=\{
      \begin{aligned}
@@ -538,10 +595,13 @@ plt.show()                      #显示出来
      $$ 
   3. 绝对损失函数 $$ L(t, y(x))=|t-y(x)|$$      
   4. 对数损失函数 $$ L(t, P(t|x))=-\log{P(t|x)}$$ 
-- 密度估计：也叫概率密度估计，只通过样本数据估计出概率密度函数的参数，从而知道概率密度；
-- AIC：akaike information criterion，也叫赤池信息准则，是衡量统计模型拟合优良性的一种标准，又由与它为日本统计学家赤池弘
-  次创立和发展的，因此又称赤池信息量准则。它建立在熵的概念基础上，可以权衡所估计模型的复杂度和此模型拟合数据的优良性。在
-  一般的情况下，AIC可以表示如下, 其中k是参数的数量，L是似然函数.  $$ AIC=2k-2ln(L)$$
+- 密度估计：也叫概率密度估计，只通过样本数据估计出概率密度函数的参数，从而
+  知道概率密度； 
+- AIC：akaike information criterion，也叫赤池信息准则，是衡量统计模型拟合优
+  良性的一种标准，又由与它为日本统计学家赤池弘次创立和发展的，因此又称赤池
+  信息量准则。它建立在熵的概念基础上，可以权衡所估计模型的复杂度和此模型拟
+  合数据的优良性。在一般的情况下，AIC可以表示如下, 其中k是参数的数量，L是似
+  然函数.  $$ AIC=2k-2ln(L)$$ 
 - BIC: bayesian information criterion, 贝叶斯信息量. $$ -2ln(L)+ln(n)*k $$ 
 ** 估计量评估
 对于一般情况下，随机变量都会服从正太分布\(N(\mu, \sigma^{2})\)，令其概率密度为p(x).则log似然函数为
