最大似然和最大后验估计

--- a/math.org
+++ b/math.org
@@ -535,6 +535,21 @@ plt.show()                      #显示出来
   
 **** 指数分布
 **** \beta分布
+** 贝叶斯
+*** 最大似然和最大后验估计
+最大似然也叫ML，最大后验也叫MAP，MAP估计方法根据经验数据获得对难以观察的量
+的点估计，该方法将被估计量的先验分布融合进去。MAP可以看作规则化的ML。或者说
+MAP是对贝叶斯公式的直接完全的应用，而ML是对贝叶斯公式分子项中的条件概率的最
+大化应用。\par
+假设需要根据观察数据x估计没有观察到的总体参数\(\theta\), 使用f作为x的采样分
+布，这样f(x|\(\theta\))就是总体参数为\(\theta\)时x的概率。函数
+f(x|\(\theta\))就是似然函数，利用观察数据x对\(\theta\)的估计就是最大似然估
+计。既最大化f(x|\(\theta\))的\(\theta\).
+$$ \hat{\theta}_{ML} = argmax_{\theta} f(x|\theta)$$ \par
+而如果\theta存在一个先验分布g，这就可以利用贝叶斯公式来计算后验概率。也就是
+此时对\theta的估计是后验估计。
+$$ \hat{\theta}_{ML} = argmax_{\theta} \frac{f(x|\theta)g(\theta)}{\int{f(x|\theta^{'})g(\theta^{'})d\theta^{'}}}$$ 
+分子跟\theta无关，算是一个常数
 * 统计
 ** 概念
 - 样本分类：样本具有特征向量，样本属于某个类别，如果在坐标系中表示，则特征
