极值和导数

--- a/algorithm.org
+++ b/algorithm.org
@@ -31,6 +31,28 @@
   未知状况可以是任意的结果，若没有其它额外的假设，这任务就无法解决。这种关于目标函数的必要假设就称为归纳偏置；
 - generalization：一般化，指的是，我们通过样本集训练出的算法可以推广到未知输入得到正确输出；
 - Loss function:损失函数，表示实际输出值与我们拟合算法输出值的差；
+** 最小二乘法
+最小二乘法是为了求一组观察数据(变量X和Y)之间的函数关系Y=f(X).应用条件如下 
+1. 若变量间的函数形式根据理论分析或者以往的经验已经确定好了，只是其中某些参
+   数是未知的，则可以通过观察数据来确定这些参数；
+2. 若变量间的具体函数形式尚未确定，则需要通过观测数据来确定函数形式和参数；
+在选取的参数估计值\widehat{a_{1}}, \widehat{a_{2}},..., \widehat{a_{k}}, 应
+使得变量Y的诸多观测值y_{i}与其真值的估计值(又叫拟合值)，即f(X_{i}; a_{1}, ..., a_{k})
+之差的平方和最小，用式子表示时，记残差v_{i}为
+ $$ v_{i}=y_{i}-\hat{y_{i}}=y_{i}-f(X_{i}; a_{1}, ..., a_{k})$$ 
+最小二乘法就是要求下面式子的最小值时的a_{i}参数。
+$$R=\sum_{i=1}^{n}v_{i}^{2}$$ 
+在这个条件下，用数学中求极值的方法可以求出这些参数。根据数学分析中求函数极
+值的条件
+\begin{equation}
+\begin{cases}
+\frac{\partial R}{\partial a_{1}}=\frac{\partial\sum_{i=1}^{n}v_{i}^{2}}{\partial a_{1}}=0\\
+\frac{\partial R}{\partial a_{2}}=\frac{\partial\sum_{i=1}^{n}v_{i}^{2}}{\partial a_{2}}=0\\
+\frac{\partial R}{\partial a_{k}}=\frac{\partial\sum_{i=1}^{n}v_{i}^{2}}{\partial a_{k}}=0\\
+\end{cases}
+\end{equation}
+
+共得到k个方程，求这k个方程的联立解就可以求出\widehat{a_{i}}的值。
 ** cordic算法
 三角函数的计算是个复杂的主题，有计算机之前，人们通常通过查找三角函数表来计算任意角度的三角函数的值。这种表格在人们刚刚产
 生三角函数的概念的时候就已经有了，它们通常是通过从已知值（比如sin(π/2)=1）开始并重复应用半角和和差公式而生成。现在有了
