--- a/math.org
+++ b/math.org
@@ -159,8 +159,11 @@ pl.show()
   导数，则当x在(a, b)内时，有下面的n阶泰勒公式成立
   $$f(x)=f(x_{0})+f'(x_{0})(x-x_{0})+\frac{f^{(n)}(x_{0})}{n!}(x-x_{n})^{n}+\frac{f^{(n+1)}(x_{0}+\theta(x-x_{0}))}{(n+1)!}(x-x_{0})^{n+1},(0<\theta<1)$$ 
 * 高数
-- 欧拉转换：
+- 欧拉转换
   $$e^{jx}=cos(x)+jsin(x)$$ 和 $$cos(x)=\frac{e^{jx}+e^{-jx}}{2}$$ 
+- 极值：函数f在某区间存在一阶和二阶导数，则
+  1. 极小值：如果二阶导数大于0，一阶导数等于0的地方就是极小值；
+  2. 极大值：如果二阶导数小于0，一阶导数等于0的地方就是极大值；
 * 矩阵
 ** 概念
 矩阵实际上是高等线性函数的系数，线性函数就是线性变换的表达式, 可以说向量是
