--- a/math.org
+++ b/math.org
@@ -158,12 +158,28 @@ pl.show()
 - 泰勒级数：若函数f(x)在含义\(x_{0}\)的某个开区间(a, b)内具有直到(n+1)阶的
   导数，则当x在(a, b)内时，有下面的n阶泰勒公式成立
   $$f(x)=f(x_{0})+f'(x_{0})(x-x_{0})+\frac{f^{(n)}(x_{0})}{n!}(x-x_{n})^{n}+\frac{f^{(n+1)}(x_{0}+\theta(x-x_{0}))}{(n+1)!}(x-x_{0})^{n+1},(0<\theta<1)$$ 
-* 高数
+* 微积分
 - 欧拉转换
   $$e^{jx}=cos(x)+jsin(x)$$ 和 $$cos(x)=\frac{e^{jx}+e^{-jx}}{2}$$ 
 - 极值：函数f在某区间存在一阶和二阶导数，则
   1. 极小值：如果二阶导数大于0，一阶导数等于0的地方就是极小值；
   2. 极大值：如果二阶导数小于0，一阶导数等于0的地方就是极大值；
+** 梯度
+函数f(x, y)的梯度由下式表示
+$$
+\triangledown{}f(x, y) = 
+\begin{pmatrix}
+\frac{\partial{}f(x, y)}{\partial{}x} \\
+\frac{\partial{}f(x, y)}{\partial{}y} \\
+\end{pmatrix}
+$$ 
+梯度意味着要沿x的方向移动\(\frac{\partial{}f(x, y)}{\partial{}x}\), 沿y方向
+移动\(\frac{\partial{}f(x, y)}{\partial{}y}\)，其中f(x, y)必须要在待计算的
+点上有定义且可微。梯度是有方向的，总是沿着函数值上升最快的方向移动，因此沿
+梯度方向或者反方向进行时，就能达到一个函数的最大值或者最小值，因此梯度上升
+算法就是不断更新梯度值，直到梯度不再变化或者变化很小，即函数达到最大值梯度
+算法的迭代公式为（\alpha是步长，即每一步移动量）：
+$$w := w+\alpha{}\triangledown_{w}f(w)$$ 
 * 矩阵
 ** 概念
 矩阵实际上是高等线性函数的系数，线性函数就是线性变换的表达式, 可以说向量是
