--- a/encyclopedia.org
+++ b/encyclopedia.org
@@ -186,6 +186,21 @@ public static double GetDistance(double lat1, double lng1, double lat2, double l
 }
 #+end_src
 
+** 汽车
+*** 概念
+- 四冲程：
+  1. 进气；
+  2. 压缩；
+  3. 做工；
+  4. 排气；
+- 扭矩：物理学中表示力矩，等于力和力臂的乘积，单位牛米，通俗讲就是劲道大小，
+  汽车的扭矩最大点在一定的转速处，低于或高于此转速扭矩达不到最大值，扭矩越
+  大加速就越快；
+- 功率：指物体在单位时间内所做的功。功率越大转速越高，汽车的最高速度也越高，
+  最大功率一般用马力（PS）或千瓦（KW）表示，1PS=0.735KW，功率就是扭矩和转速
+  的乘积，最大功率在最高转速时输出；
+- 排量：就是气缸容积，越大也就意味着能够吸入更多的油气混合物，做工时爆炸能
+  量就更强，输出扭矩就越大；
 * 百科经济
 ** 基本概念
 - 利率：储蓄存款利率由国家统一规定，人民银行挂牌公告。利率也称为利息率，是在一定日期内利息与本金的比率，一般分为年利率、
