--- a/math.org
+++ b/math.org
@@ -509,8 +509,11 @@ $$
 - 设X, Y是两个随机变量，则有\(D(X+Y)=D(X)+D(Y)+2E{(X-E(X))(Y-E(Y))}\), 特别的，若X, Y相互独立，则有\(D(X+Y)=D(X)+D(Y)\); 
 ** 概率分布
 *** 离散分布
-**** 01分布
-随机变量X只能取0和1两个值，取0和1的概率分布是p，q，p+q=1
+**** 0-1分布
+随机变量X只能取0和1两个值，取0和1的概率分布是p，q，p+q=1, 其分布律可以表示
+为$$P(X=k)=p^{k}(1-p)^{1-k},k=0,1$$  
+0-1分布也叫伯努力分布，也叫两点分布。同二项分布的区别是，0-1分布是指伯努力
+实验中取0或者1的概率分布，而二项分布指多次伯努力实验，取1或0的次数的概率。
 **** 二项分布
 - 定义：服从二项分布的随机变量X表示在n个独立的是/非试验中成功的次数i，其中每次试验的成功概率为p
   $$ p_{i} = C_{n}^{i}p^{i}(1-p)^{n-i},i=0, 1, ..., n $$
@@ -533,7 +536,6 @@ plt.ylabel('probability of k')  #y轴是k次的概率
 plt.show()                      #显示出来
 #+end_src
 
-**** 伯努利分布
 **** 泊松分布
 **** 几何分布
 *** 连续分布
