向量矩阵求导

--- a/language.org
+++ b/language.org
@@ -73,6 +73,8 @@
 - ANN: artificial neural network，人工神经网络；
 - PAC: probably approximately correct, 概率近似正确；
 - AI: artificial intelligence，人工智能；
-- RSS: residual sum of squares, 残差，也就是平方差和
-- SSE：sum of squared errors ，平方差和
-- MSE：mean squared error，均方差
+- RSS: residual sum of squares, 残差，也就是平方差和；
+- SSE：sum of squared errors ，平方差和；
+- MSE：mean squared error，均方差；
+- MLE: maximum likelihood estimation，最大似然估计；
+- NLL：negative log likelihood，负对数似然, 也就是MLE取负；
