--- a/algorithm.org
+++ b/algorithm.org
@@ -3,6 +3,12 @@
 #+latex_class: org-latex-pdf 
 #+latex: \newpage 
 
+* 常规算法
+** 排序
+*** 快速排序
+快速排序是冒泡排序的改进版，其思想是选定待排序数据中的一个值作为比较轴，然
+后将待排序数据与该值比较，将他们分配到轴两端，其中左边的比轴小，右边的比轴
+大，循环的在左右两边的数据做快速排序操作，直到最后排序完毕。
 * 机器学习
 ** 基本概念
 - 过拟合：overfitting，一个过分复杂的系统单纯对训练样本集能获得完美的表现，但是对于新鲜样本则可能不令人满意的现象称为过
